demo-app/demo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: default
  labels:
    app: demo-app
spec:
  type: NodePort
  selector:
    app: demo-app
  ports:
  - name: http
    nodePort: 8080
    port: 80
    protocol: TCP
    targetPort: 8080
